--- a/projeto-glass-html5/fale-conosco.html
+++ b/projeto-glass-html5/fale-conosco.html
@@ -1,47 +1,143 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+      xmlns="http://www.w3.org/1999/html">
+<head>
+    <meta charset="utf-8"/>
+    <title>Tudo sobre Google Glass</title>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+    <link rel="stylesheet" href="_css/form.css"/>
+</head>
 
-[AQUI ENTRA UMA FOTO]
+<script src="_javascript/funcoes.js"></script>
+<script>
+    function calcTotal(){
+        var qtd = parseInt(document.getElementById('cQtd').value);
+        tot = qtd * 1500;
+        document.getElementById('cTot').value = tot;
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+    }
+</script>
 
-Fale Conosco > Contato
-Formulário de Contato
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+<body>
+<div id="interface">
+    <header id="cabecalho">
+        <hgroup>
+            <h1>Google Glass</h1>
+            <h2>A revolução do Google está chegando</h2>
+        </hgroup>
+        <img id="icone" src="_imagens/contato.png">
+        <nav id="menu">
+            <h1>Menu Principal</h1>
+            <ul type="disc">
+                <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html" target="_self">Home</a></li>
+                <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="specs.html" target="_self">Especificações</a></li>
+                <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="fotos.html" target="_self">Fotos</a></li>
+                <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="multimidia.html" target="_self">Multimídia</a></li>
+                <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="fale-conosco.html" target="_self">Fale conosco</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="corpoFull">
+        <article id="noticia-principal">
+            <header id="cabecalho-artigo">
+                <hgroup>
+                    <h3>Fale Conosco > Contato</h3>
+                    <h1>Formulário de Contato</h1>
+                    <h2>por Valdir Silva</h2>
+                    <h3 class="dir">Atualizado em Novembro/2015</h3>
+                </hgroup>
+            </header>
+        </article>
+    </section>
 
-Identificação do Usuário
-    Nome:
-    Senha:
-    E-mail:
-    Sexo:
-        - Masculino
-        - Feminino
-    Data de Nascimento:
+    <form method="post" id="fContato" action="mailto:mano_val@hotmail.com" oninput="calcTotal();">
+        <fieldset id="usuario">
+            <legend>Identificação do Usuário</legend>
+                <p><label for="cNome">Nome:</label>
+                    <input type="text" name="tNome" id="cNome" size="35" maxlength="100" placeholder="Nome completo"/></p>
+                <p><label for="cSenha">Senha:</label>
+                    <input type="password" name="tSenha" id="cSenha" size="20" maxlength="30" placeholder="Senha" /></p>
+                <p><label for="cEmail">E-mail:</label>
+                    <input type="email" name="tEmail" id="cEmail" size="35" maxlength="60" placeholder="E-mail"/></p>
 
-Endereço do Usuário
-    Logradouro:
-    Número:
-    Estado:
-    Cidade:
+                <fieldset id="sexo">
+                    <legend>Sexo</legend>
+                        <input type="radio" name="tSexo" id="cMasc"/> <label for="cMasc">Masculino</label><br>
+                        <input type="radio" name="tSexo" id="cFem"/> <label for="cFem">Feminino</label>
+                    </fieldset>
+                <p>Data de Nascimento: <input type="date" name="tNasc" id="cNasc" placeholder="Data de nascimento"/></p>
+        </fieldset>
 
-Mensagem do Usuário
-    Grau de Urgência:
-    Mensagem:
+         <fieldset id="endereco">
+            <legend>Endereço do Usuário</legend>
+                <p><label for="cRua">Logradouro:</label>
+                    <input type="text" name="tRua" id="cRua" size="35" maxlength="100" placeholder="Rua, Av, Trav, ..."/></p>
+                <p><label for="cNum">Número:</label>
+                    <input type="text" name="tNum" id="cNum" size="5" maxlength="10" placeholder="Número"/> </p>
+                <p><label for="cEstado">Estado:</label>
+                    <select name="tEstado" id="cEstado">
+                        <option>Selecione</option>
+                        <optgroup label="Região Sudeste">
+                            <option value="RJ">Rio de Janeiro</option>
+                            <option value="SP">São Paulo</option>
+                            <option value="MG">Minas Gerais</option>
+                        </optgroup>
+                        <optgroup label="Região Nordeste">
+                            <option value="PE">Pernambuco</option>
+                            <option value="BA">Bahia</option>
+                        </optgroup>
+                    </select></p>
 
-Quero um Google Glass
-    Gostaria de adquirir um Google Glass quando disponível
-    Cor:
-    Quantidade:
-    Preço Total: R$
+                <p><label for="cCidade">Cidade:</label>
+                    <input type="text" name="tCidade" id="cCidade" size="20" maxlength="30" placeholder="Cidade" list="cidades"/></p>
+                    <datalist id="cidades">
+                        <option value="Rio de Janeiro"></option>
+                        <option value="Cabo Frio"></option>
+                    </datalist>
 
+        </fieldset>
 
-[BOTÃO ENVIAR]
+        <fieldset id="mensagem">
+            <legend>Mensagem do Usuário</legend>
+                <p>
+                    <label for="cGrau">Grau de Urgência:</label>
+                    Min<input type="range" name="tUrg" id="cUrg" min="0" max="10" step="2"/>Máx
+                </p>
+                <p>
+                    <label for="cMsg">Mensagem:</label>
+                    <textarea name="tMsg" id="cMsg" cols="40" rows="5" placeholder="Deixe aqui a sua mensagem"></textarea>
+                </p>
+        </fieldset>
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+        <fieldset id="pedido">
+            <legend>Quero um Google Glass</legend>
+                <p>
+                    <input type="checkbox" name="tPed" id="cPed" checked/>
+                    <label for="cPed">Gostaria de adquirir um Google Glass quando disponível</label>
+                </p>
+                <p>
+                    <label for="cCor">Cor:</label>
+                    <input type="color" name="tCor" id="cCor" value="#0000ff"/>
+                </p>
+                <p>
+                    <label for="cQtd">Quantidade:</label>
+                    <input type="number" name="tQtd" id="cQtd" min="0" max="20" maxlength="10    " value="0"/>
+                </p>
+                <p>
+                    <label for="cTot">Preço Total: R$</label>
+                    <input type="text" name="tTot" id="cTot" placeholder="Total à pagar" readonly/>
+                </p>
+        </fieldset>
+
+        <input type="image" name="tEnviar" src="_imagens/botao-enviar.png"/>
+    </form>
+
+    <footer id="rodape">
+        <p>Copyright&copy; 2015 - by Valdir Silva </br>
+            <a href="https://www.facebook.com/valdir.silva.712" target="_blank">Facebook</a> |
+            <a href="https://twitter.com/manoval" target="_blank">Twitter</a>
+        </p>
+    </footer>
+</div>
+</body>
+</html>
