--- a/projeto-glass-html5/fotos.html
+++ b/projeto-glass-html5/fotos.html
@@ -1,29 +1,66 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+      xmlns="http://www.w3.org/1999/html">
+<head>
+    <meta charset="utf-8"/>
+    <title>Tudo sobre Google Glass</title>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+    <link rel="stylesheet" href="_css/fotos.css"/>
+</head>
 
-[AQUI ENTRA UMA FOTO]
+<script src="_javascript/funcoes.js"></script>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+<body>
+<div id="interface">
+    <header id="cabecalho">
+        <hgroup>
+            <h1>Google Glass</h1>
+            <h2>A revolução do Google está chegando</h2>
+        </hgroup>
+        <img id="icone" src="_imagens/fotos.png">
+        <nav id="menu">
+            <h1>Menu Principal</h1>
+            <ul type="disc">
+                <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="index.html" target="_self">Home</a></li>
+                <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="specs.html" target="_self">Especificações</a></li>
+                <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="fotos.html" target="_self">Fotos</a></li>
+                <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="multimidia.html" target="_self">Multimídia</a></li>
+                <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/fotos.png')"><a href="fale-conosco.html" target="_self">Fale conosco</a></li>
+            </ul>
+        </nav>
+    </header>
 
-Glass > Fotos
-Galeria de Imagens do Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+    <section id="corpoFull">
+        <article id="noticia-principal">
+            <header id="cabecalho-artigo">
+                <hgroup>
+                    <h3>Glass > Fotos</h3>
+                    <h1>Galeria de Imagens do Google Glass</h1>
+                    <h2>por Valdir Silva</h2>
+                    <h3 class="dir">Atualizado em Novembro/2015</h3>
+                </hgroup>
+            </header>
 
-Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma breve descrição.
+        <p>Veja na nossa galeria de fotos várias belas imagens que mostram algumas das principais características do Google Glass, como recursos        e propriedades que estão impressionando o mundo inteiro. Basta passar o mouse sobre uma das fotos para ver uma versão ampliada e com uma        breve descrição.</p>
 
-- Agenda e lembretes
-- Sergey Brin usando o Glass
-- Leve e compacto
-- Sensação de uma tela de 50"
-- Vários tipos de lente
-- Informações importantes
+    <!-- Criacao de album de fotografias -->
+    <ul id="albumFotos">
+        <li id="foto01"><span>Agenda e lembretes</span></li>
+        <li id="foto02"><span>Sergey Brin usando o Glass</span></li>
+        <li id="foto03"><span>Leve e compacto</span></li>
+        <li id="foto04"><span>Sensação de uma tela de 50"</span></li>
+        <li id="foto05"><span>Vários tipos de lente</span></li>
+        <li id="foto06"><span>Informações importantes</span></li>
+    </ul>
+            </article>
+        </section>
 
-Copyright 2013 - by Gustavo Guanabara
-
-Facebook | Twitter
+    <footer id="rodape">
+        <p>Copyright&copy; 2015- by Valdir Silva </br>
+            <a href="https://www.facebook.com/valdir.silva.712" target="_blank">Facebook</a> |
+            <a href="https://twitter.com/manoval" target="_blank">Twitter</a>
+        </p>
+    </footer>
+</div>
+</body>
+</html>
