--- a/projeto-glass-html5/index.html
+++ b/projeto-glass-html5/index.html
@@ -1,99 +1,123 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns="http://www.w3.org/1999/html">
-<head>
-    <meta charset="utf-8"/>
-    <title>Tudo sobre Google Glass</title>
-    <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
-</head>
-<body>
-<div id="interface">
-    <header>
-        <hgroup>
-            <h1>Google Glass</h1>
-            <h2>A revolução do Google está chegando</h2>
-        </hgroup>
+<html lang="pt-br" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+      xmlns="http://www.w3.org/1999/html">
+    <head>
+        <meta charset="utf-8"/>
+        <title>Tudo sobre Google Glass</title>
+        <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+        <link rel="icon" href="_imagens/glass-logo-peq.jpg"/>
+    </head>
+
+    <script src="_javascript/funcoes.js"></script>
+
+    <body>
+        <div id="interface">
+            <header id="cabecalho">
+                <hgroup>
+                    <h1>Google Glass</h1>
+                    <h2>A revolução do Google está chegando</h2>
+                </hgroup>
+        <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ul type="disc">
+                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html" target="_self">Home</a></li>
+                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="specs.html" target="_self">Especificações</a></li>
+                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html" target="_self">Fotos</a></li>
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html" target="_self">Multimídia</a></li>
+                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html" target="_self">Fale conosco</a></li>
+                </ul>
+            </nav>
+        </header>
+
+            <section id="corpo">
+                <article id="noticia-principal">
+                    <header id="cabecalho-artigo">
+                <hgroup>
+                    <h3>Tecnologia > Inovações</h3>
+                    <h1>Saiba tudo sobre o Google Glass</h1>
+                    <h2>por Valdir Silva</h2>
+                    <h3 class="dir">Atualizado em Novembro/2015</h3>
+                </hgroup>
+                    </header>
+
+            <h2>O que é</h2>
+            <p>O <b>Google Glass</b> é um acessório em forma de óculos que possibilita a interação dos usuários com
+            diversos conteúdos em realidade aumentada. Também chamado de <a href="http://glass.google.com" target="_blank">Project              Glass</a>, o eletrônico é capaz de tirar
+            fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;confe&shy;rên&shy;cias.
+            Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o
+            <span style="font-weight: bolder;">Google Glass</span> encontra-se em fase de testes e já possui um
+            vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes
+            anti-furto e de desbloqueio de tela para o acessório.</p>
+
+            <figure class="foto-legenda">
+            <img src="_imagens/glass-quadro-homem-mulher.jpg"/>
+                <figcaption>
+                    <h3>Google Glass</h3>
+                    <h4>Uma nova maneira de ver o mundo.</h4>
+                </figcaption>
+            </figure>
+
+            <h2>Data de lançamento</h2>
+            <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível
+            em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
 
-    <img src="_imagens/glass-oculos-preto-peq.png">
+            <h2>Especificações Técnicas</h2>
 
-    <nav>
-        <h1>Menu Principal</h1>
-        <ul type="disc">
-            <li>Home</li>
-            <li>Especificações</li>
-            <li>Fotos</li>
-            <li>Multimídia</li>
-            <li>Fale conosco</li>
-        </ul>
-    </nav>
+            <table id="tblEspec">
+            <caption>Tabela Técnica do Google Glass <span>Mar/2013</span></caption>
+            <tr><td class="colEsq">Tela</td> <td class="colDir">Resolução equivalente a tela de 25"</td></tr>
+            <tr><td rowspan="2" class="colEsq">Camera</td> <td class="colDir">5MP para fotos</td></tr>
+            <tr><td class="colDir">720p para vídeos</td></tr>
+            <tr><td rowspan="2" class="colEsq">Conectividade</td> <td class="colDir">Wi-Fi</td></tr>
+            <tr><td class="colDir">Bluetooth</td></tr>
+            <tr><td class="colEsq">Memória Interna</td> <td class="colDir">12GB</td></tr>
+            </table>
 
-    </header>
+            <h2>Como funciona</h2>
+            <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte
+            superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como
+            selecionar opções com o movimento da cabeça</p>
 
-    <hgroup>
-    <h3>Tecnologia > Inovações</h3>
-    <h1>Saiba tudo sobre o Google Glass</h1>
-    <h2>por Gustavo Guanabara</h2>
-    <h3>Atualizado em 23/Abril/2013</h3>
-    </hgroup>
+            <h2>O que você pode fazer com o Google Glasses</h2>
+            <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/>humano”,
+            já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado,
+            mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-    <h1>O que é</h1>
-    <p>O <del><b>Google Glass</b></del> é um acessório em forma de óculos que possibilita a interação dos usuários com
-        diversos conteúdos em realidade aumentada. Também chamado de <i>Project Glass</i>, o eletrônico é capaz de tirar
-        fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;confe&shy;rên&shy;cias.
-        Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o
-        <span style="font-weight: bolder;">Google Glass</span> encontra-se em fase de testes e já possui um
-        vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes
-        anti-furto e de desbloqueio de tela para o acessório.</p>
+            <video id="TelaPrincipal" controls="controls" poster="_imagens/video-mini01.jpg">
+                <source src="_media/one-day.mp4" type="video/mp4"/>
+                Não foi possível carregar o aruivo de video! :(
+            </video>
+            </article>
+            </section>
 
-    <figure class="foto-legenda">
-        <img src="_imagens/glass-quadro-homem-mulher.jpg"/>
-        <figcaption>
-            <h3>Google Glass</h3>
-            <h4>Uma nova maneira de ver o mundo.</h4>
-        </figcaption>
-    </figure>
+            <aside id="lateral">
+                <h1>Outras Notícias</h1>
+                <h2>Vídeo mais recente</h2>
 
-    <h1>Data de lançamento</h1>
-    <p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível
-        em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
+                <video id="videoLateral" controls="controls" poster="_imagens/video-mini02.jpg">
+                    <source src="_media/how-it-feels.mp4" type="video/mp4"/>
+                    Não foi possível carregar o aruivo de video! :(
+                </video>
 
-<h1>Especificações Técnicas</h1>
-<h2>Tabela Técnica do Google Glass Mar/2013</h2>
+                <h2>Novidades no Glass</h2>
+                <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no
+                mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes
+                dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de
+                sua cabeça, sem usar nenhum tipo de alto-falante.</p>
 
-Tela:Resolução equivalente a tela de 25"
-Camera: 5MP para fotos / 720p para vídeos
-Conectividade: Wi-Fi/ Bluetooth
-Memória Interna: 12GB
+                <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360
+                pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a
+                2,5 metros de distância do espectador.</p>
+            </aside>
 
-    <h1>Como funciona</h1>
-    <p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte
-        superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como
-        selecionar opções com o movimento da cabeça</p>
-
-    <h1>O que você pode fazer com o Google Glasses</h1>
-    <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/>humano”,
-        já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado,
-        mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
-
-[AQUI ENTRA UM VÍDEO]
-
-<h1>Outras Notícias</h1>
-<h2>Vídeo mais recente</h2>
-
-[AQUI ENTRA UM VÍDEO]
-
-    <h2>Novidades no Glass</h2>
-    <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no
-        mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes
-        dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de
-        sua cabeça, sem usar nenhum tipo de alto-falante.</p>
-
-    <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360
-        pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a
-        2,5 metros de distância do espectador.</p>
-
-<p>Copyright &copy; 2013 - by Valdir Silva
-Facebook | Twitter</p>
-</div>
-</body>
+            <footer id="rodape">
+                <p>Copyright&copy; 2015 - by Valdir Silva </br>
+                    <a href="https://www.facebook.com/valdir.silva.712" target="_blank">Facebook</a> |
+                    <a href="https://twitter.com/manoval" target="_blank">Twitter</a>
+                </p>
+            </footer>
+        </div>
+    </body>
 </html>
