--- a/projeto-glass-html5/multimidia.html
+++ b/projeto-glass-html5/multimidia.html
@@ -1,25 +1,82 @@
-Google Glass
-A revolução do Google está chegando
+<!DOCTYPE html>
+<html lang="pt-br" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+      xmlns="http://www.w3.org/1999/html">
+<head>
+    <meta charset="utf-8"/>
+    <title>Tudo sobre Google Glass</title>
+    <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+    <link rel="stylesheet" href="_css/media.css"/>
+</head>
 
-[AQUI ENTRA UMA FOTO]
+<script language="JavaScript" src="_javascript/funcoes.js"></script>
 
-Menu Principal
-- Home
-- Especificações
-- Fotos
-- Multimídia
-- Fale conosco
+<body>
+<div id="interface">
+    <header id="cabecalho">
+        <hgroup>
+            <h1>Google Glass</h1>
+            <h2>A revolução do Google está chegando</h2>
+        </hgroup>
+        <img id="icone" src="_imagens/multimidia.png">
+            <nav id="menu">
+                <h1>Menu Principal</h1>
+                <ul type="disc">
+                    <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="index.html" target="_self">Home</a></li>
+                    <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="specs.html" target="_self">Especificações</a></li>
+                    <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fotos.html" target="_self">Fotos</a></li>
+                    <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="multimidia.html" target="_self">Multimídia</a></li>
+                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/multimidia.png')"><a href="fale-conosco.html" target="_self">Fale conosco</a></li>
+                </ul>
+        </nav>
+    </header>
 
-Glass > Multimídia
-Sons e Vídeos
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+    <section id="corpoFull">
+        <article id="noticia-principal">
+            <header id="cabecalho-artigo">
+                <hgroup>
+                    <h3>Glass > Multimídia</h3>
+                    <h1>Sons e Vídeos</h1>
+                    <h2>por Valdir Silva</h2>
+                    <h3 class="dir">Atualizado em Novembro/2015</h3>
+                </hgroup>
+            </header>
 
+            <!--Area de multimidia do site com audios e videos-->
+            <div id="tvRadio">
+                <!--
+                    Utiliza-se tambem musicas no padrao .OGG e .AAC
+                    Necessita conversao e altera o type do arquivo para:
+                    audio/x-aac e audio/ogg, e altera a extensao
+                -->
+                <audio id="musica" controls="controls">
+                    <source src="_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg"/>
+                    Não foi possível carregar o audio! :(
+                </audio>
+                <video id="filme" controls="controls" poster="_imagens/video-mini03.jpg">
+                <!--
+                    Utiliza-se tambem videos nos formatos .OGV e .webM
+                    Necessita conversao e alterar o type para:
+                    video/webM e video/ogg
+                -->
+                    <source src="_media/getting-started.mp4" type="video/mp4"/>
+                    Não foi possível carregar o arquivo de video! :(
+                </video>
+            </div>
 
-Áudio e Vídeo
+            <!--
+                Video postado diretamente do YouTube
+            -->
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/cAediAS9ADM" frameborder="0" allowfullscreen></iframe>
 
-[AQUI ENTRA UM VÍDEO]
-[AQUI ENTRA UM ÁUDIO]
+         </article>
+    </section>
 
-Copyright 2013 - by Gustavo Guanabara
-Facebook | Twitter
+    <footer id="rodape">
+        <p>Copyright&copy; 2015 - by Valdir Silva </br>
+            <a href="https://www.facebook.com/valdir.silva.712" target="_blank">Facebook</a> |
+            <a href="https://twitter.com/manoval" target="_blank">Twitter</a>
+        </p>
+    </footer>
+</div>
+</body>
+</html>
